fix: icons too close
Former-commit-id: 1ddb508a34f89fd14cc5c52c331c4fa183fe08eb

--- a/themes/future-imperfect/static/css/add-on.css
+++ b/themes/future-imperfect/static/css/add-on.css
@@ -473,3 +473,7 @@ ul.sidebar-links li a {
     letter-spacing: 0.25em;
     font-weight: 400;
 }
+
+.fa-tss {
+    margin-right: 2px;
+}
